New entries should be added at the top

2004-12-22 Refactored NavigationToolbar in tkagg to support app
           embedding , init now takes (canvas, window) rather than
           (canvas, figman) - JDH

2004-12-21 Refactored axes and subplot management - removed
           add_subplot and add_axes from the FigureManager.  classic
           toolbar updates are done via an observer pattern on the
           figure using add_axobserver.  Figure now maintains the axes
           stack (for gca) and supports axes deletion.  Ported changes
           to GTK, Tk, Wx, and FLTK.  Please test!  JDH

2004-12-21 Lots of image optimizations - 4x performance boost over
           0.65 JDH

2004-12-20 Fixed a figimage bug where the axes is shown and modified
           tkagg to move the destroy binding into the show method.

2004-12-18 Minor refactoring of tkagg toolbar to support embedding in
           an application - JDH

2004-12-14 Added linestyle to collections -  JDH

2004-12-14 Applied Nadia's setupext patch to fix libstdc++ link
           problem with contour and solaris  -JDH

2004-12-14 A number of pychecker inspired fixes, including removal of
           True and False from cbook which I erroneously thought was
           needed for python2.2 - JDH

2004-12-14 Finished porting doc strings for set introspection.
           Used silent_list for many get funcs that return
           lists. JDH

2004-12-13 dates.py: removed all timezone() calls, except for UTC - SC

======================================================================

2004-12-13 0.65 released - JDH

2004-12-13 colors.py: rgb2hex(), hex2color() made simpler (and faster), also
           rgb2hex() - added round() instead of integer truncation
           hex2color() - changed 256.0 divisor to 255.0, so now
           '#ffffff' becomes (1.0,1.0,1.0) not (0.996,0.996,0.996) - SC

2004-12-11 Added ion and ioff to pylab interface - JDH
