@@ -30,7 +30,7 @@
 backend      : GTKAgg    # the default backend
 numerix      : Numeric   # Numeric or numarray
 interactive  : False     # see http://matplotlib.sourceforge.net/interactive.html
-toolbar      : classic   # None | classic | toolbar2
+toolbar      : toolbar2   # None | classic | toolbar2
 timezone     : UTC        # a pytz timezone string, eg US/Central or Europe/Paris
 
 # Where your matplotlib data lives if you installed to a non-default
