@@ -612,3 +612,7 @@ ZeroDivisionError: SeparableTransformation::eval_scalars yin interval is zero; c
 
 -- DONE add hold option to plot
 
+
+-- fix linestyle for collections
+
+-- update ticklabels and range for colorbar when clim changes
